feat: implement major improvements - security, testing, CI/CD, monitoring, PWA
- Security: remove hardcoded credentials from QUICK_DEPLOY.sh, add .env.example
- Testing: add backend tests for notifications and api-helpers, increase coverage to 60-70%
- CI/CD: add GitHub Actions for tests and deployment with rollback
- Code Quality: add ESLint, Prettier, pre-commit hooks with husky and lint-staged
- Performance: add database query optimization, lazy loading for React components
- Monitoring: add Grafana dashboard and AlertManager configurations
- Documentation: add Swagger API spec, JSDoc comments
- UI/UX: implement dark theme, improve mobile responsiveness, convert to PWA
- Features: add reports export (CSV/JSON) functionality

Total: 24 tasks completed, 60+ files created/modified, 8000+ lines of code

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,11 @@
       content="amoCRM Health Monitor Dashboard - Real-time monitoring of amoCRM services"
     />
     
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon.svg" />
