--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,11 @@
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon.svg" />
     
+    <!-- Google Fonts - Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
     <title>amoCRM Health Monitor</title>
   </head>
   <body>
